src/test/deca/codegen/valid/test_manipulation_null.deca
// Description:
//    Test la manipulation de null, et la comparaison 
// entre adresse
//    TEST Essentiel partie C

// Resultats:
// Dans le fichier avec ce nom_output_expected au dossier result 
// Historique:
// 

class B{
    int x;
}
class A{
    B b;
}

{
    B b=new B();
    A a1 =  new A(); 
    A a2 =  new A(); 
    b = null;
    a2.b = new B();
    if (a1!=a2){
        println("egalité adresse fonctionne");
    }
}