src/test/deca/codegen/invalid/test_null.deca
// Description:
//    Test le déreferencement invalid
// Resultats:
// Erreur : erreur  déreferencement
// Historique:
//    cree le 01/01/2023

class B{
    int x;
}
class A{
    B b;
}

{
    B b=new B();
    A a1 =  new A(); 
    A a2 =  new A(); 
    b = null;
    b.x=5;
}